// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scatter objects in segments picks from a pool of one single string id 1`] = `
Array [
  Object {
    "id": "plants--bush",
    "left": 0,
    "width": 5,
  },
  Object {
    "id": "plants--bush",
    "left": 2.5174780997211976,
    "width": 5,
  },
  Object {
    "id": "plants--bush",
    "left": 7.687586461069147,
    "width": 5,
  },
  Object {
    "id": "plants--bush",
    "left": 11.138584601278607,
    "width": 5,
  },
]
`;

exports[`scatter objects in segments picks people at dense density 1`] = `
Array [
  Object {
    "id": "people-23",
    "left": 0,
    "name": "Katie",
    "width": 3,
  },
  Object {
    "id": "people-28",
    "left": 3.7407393094867594,
    "width": 3,
  },
  Object {
    "id": "people-21",
    "left": 6.615210042353208,
    "width": 1,
  },
  Object {
    "id": "people-22",
    "left": 7.860021493652412,
    "width": 1,
  },
  Object {
    "id": "people-25",
    "left": 9.368637363837973,
    "width": 2,
  },
  Object {
    "id": "people-12",
    "left": 11.270766914421966,
    "width": 2,
  },
  Object {
    "id": "people-24",
    "left": 13.983675515088438,
    "width": 4,
  },
  Object {
    "id": "people-15",
    "left": 18.618860351446976,
    "width": 2,
  },
  Object {
    "id": "people-29",
    "left": 21.074165485878872,
    "width": 4,
  },
]
`;

exports[`scatter objects in segments picks people at normal density 1`] = `
Array [
  Object {
    "id": "people-23",
    "left": 0,
    "name": "Katie",
    "width": 3,
  },
  Object {
    "id": "people-28",
    "left": 6.6357976982892,
    "width": 3,
  },
  Object {
    "id": "people-21",
    "left": 10.384033474510698,
    "width": 1,
  },
  Object {
    "id": "people-22",
    "left": 13.36673831217471,
    "width": 1,
  },
  Object {
    "id": "people-25",
    "left": 17.228791212793247,
    "width": 2,
  },
  Object {
    "id": "people-12",
    "left": 20.069223048073223,
    "width": 2,
  },
]
`;

exports[`scatter objects in segments picks people at sparse density 1`] = `
Array [
  Object {
    "id": "people-23",
    "left": 0,
    "name": "Katie",
    "width": 3,
  },
  Object {
    "id": "people-28",
    "left": 12.892968591830677,
    "width": 3,
  },
  Object {
    "id": "people-21",
    "left": 20.973353230628,
    "width": 1,
  },
]
`;
